welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:36: error: value avance is not a member of Unit
    avance()  avance()
              ^